--- a/archives/toutiao-search/2023-12-20.md
+++ b/archives/toutiao-search/2023-12-20.md
@@ -1,49 +1,75 @@
 # 2023-12-20
 
-共 320 条
+共 342 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Dec 20 2023 19:00:34 GMT+0800 (China Standard Time) -->
-1. [24小时直击甘肃地震救援](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援)
-1. [三个女生路边玩雪被大爷一句话扎心](https://so.toutiao.com/search?keyword=三个女生路边玩雪被大爷一句话扎心)
+<!-- 最后更新时间 Wed Dec 20 2023 20:07:29 GMT+0800 (China Standard Time) -->
+1. [甘肃积石山地震24小时救援纪实](https://so.toutiao.com/search?keyword=甘肃积石山地震24小时救援纪实)
+1. [山东再发“双橙”预警：局部大暴雪](https://so.toutiao.com/search?keyword=山东再发“双橙”预警：局部大暴雪)
 1. [这一年 我们的科技成果振奋人心](https://so.toutiao.com/search?keyword=这一年+我们的科技成果振奋人心)
+1. [援甘救援队吃兰州拉面老板拒收钱](https://so.toutiao.com/search?keyword=援甘救援队吃兰州拉面老板拒收钱)
+1. [媒体：赖清德难选了](https://so.toutiao.com/search?keyword=媒体：赖清德难选了)
+1. [马来西亚女歌手被粉丝连捅8刀身亡](https://so.toutiao.com/search?keyword=马来西亚女歌手被粉丝连捅8刀身亡)
+1. [3D全景还原甘肃积石山地震](https://so.toutiao.com/search?keyword=3D全景还原甘肃积石山地震)
+1. [中百集团员工侵占2亿公款潜逃境外](https://so.toutiao.com/search?keyword=中百集团员工侵占2亿公款潜逃境外)
+1. [男子在海边沙滩下挖出雪](https://so.toutiao.com/search?keyword=男子在海边沙滩下挖出雪)
+1. [甘肃救援工作基本结束](https://so.toutiao.com/search?keyword=甘肃救援工作基本结束)
+1. [“砂涌现象”与余震没有直接关系](https://so.toutiao.com/search?keyword=“砂涌现象”与余震没有直接关系)
+1. [许佳玲遇害前一天刚拍完婚纱照](https://so.toutiao.com/search?keyword=许佳玲遇害前一天刚拍完婚纱照)
+1. [专家：甘肃地震伤亡人数出乎意料](https://so.toutiao.com/search?keyword=专家：甘肃地震伤亡人数出乎意料)
+1. [天冷了整点热乎的下酒菜](https://so.toutiao.com/search?keyword=天冷了整点热乎的下酒菜)
+1. [小米辞退三名违规员工 永不录用](https://so.toutiao.com/search?keyword=小米辞退三名违规员工+永不录用)
+1. [让多人失联的“砂涌”是什么](https://so.toutiao.com/search?keyword=让多人失联的“砂涌”是什么)
+1. [席琳迪翁病情疑似恶化](https://so.toutiao.com/search?keyword=席琳迪翁病情疑似恶化)
+1. [江平遗体告别仪式将于12月23日举行](https://so.toutiao.com/search?keyword=江平遗体告别仪式将于12月23日举行)
+1. [甘肃地震中最帅拉面小伙](https://so.toutiao.com/search?keyword=甘肃地震中最帅拉面小伙)
+1. [车主误将车停在冰柱下上演金蝉脱壳](https://so.toutiao.com/search?keyword=车主误将车停在冰柱下上演金蝉脱壳)
+1. [专家：股市低迷时投资者多锻炼身体](https://so.toutiao.com/search?keyword=专家：股市低迷时投资者多锻炼身体)
+1. [女子8名亲戚在甘肃地震中遇难](https://so.toutiao.com/search?keyword=女子8名亲戚在甘肃地震中遇难)
+1. [俄防长：北约部队直接介入俄乌冲突](https://so.toutiao.com/search?keyword=俄防长：北约部队直接介入俄乌冲突)
+1. [明年三农工作有啥新信号](https://so.toutiao.com/search?keyword=明年三农工作有啥新信号)
+1. [国家气候中心回应暖冬为什么这么冷](https://so.toutiao.com/search?keyword=国家气候中心回应暖冬为什么这么冷)
+1. [奥尼尔：库里比我更强](https://so.toutiao.com/search?keyword=奥尼尔：库里比我更强)
+1. [杰伦·布朗：我们太执着于投三分](https://so.toutiao.com/search?keyword=杰伦·布朗：我们太执着于投三分)
+1. [胡锡进炒股浮亏首次突破5万元](https://so.toutiao.com/search?keyword=胡锡进炒股浮亏首次突破5万元)
+1. [鸿蒙入选2023全球十大工程](https://so.toutiao.com/search?keyword=鸿蒙入选2023全球十大工程)
+1. [搜救犬在孩子面前化身抚慰犬](https://so.toutiao.com/search?keyword=搜救犬在孩子面前化身抚慰犬)
+1. [绿军双探花末节和加时赛合计10中1](https://so.toutiao.com/search?keyword=绿军双探花末节和加时赛合计10中1)
+1. [立陶宛总统：中国“记性很好”](https://so.toutiao.com/search?keyword=立陶宛总统：中国“记性很好”)
+1. [甘肃周家村震后房屋鉴定评估展开](https://so.toutiao.com/search?keyword=甘肃周家村震后房屋鉴定评估展开)
+1. [男子买新能源车落地一天就故障](https://so.toutiao.com/search?keyword=男子买新能源车落地一天就故障)
+1. [普京对甘肃地震表达深切慰问](https://so.toutiao.com/search?keyword=普京对甘肃地震表达深切慰问)
+1. [香港导演彭发为爱妻治病破产](https://so.toutiao.com/search?keyword=香港导演彭发为爱妻治病破产)
+1. [外交部回应中国批准《枪支议定书》](https://so.toutiao.com/search?keyword=外交部回应中国批准《枪支议定书》)
+1. [三个女生路边玩雪被大爷一句话扎心](https://so.toutiao.com/search?keyword=三个女生路边玩雪被大爷一句话扎心)
+1. [男子20元中4000万连夜驱车领奖](https://so.toutiao.com/search?keyword=男子20元中4000万连夜驱车领奖)
+1. [俄防长：已消灭5800多名外国雇佣兵](https://so.toutiao.com/search?keyword=俄防长：已消灭5800多名外国雇佣兵)
+1. [消防员亲手做热羊杂汤送受灾群众](https://so.toutiao.com/search?keyword=消防员亲手做热羊杂汤送受灾群众)
+1. [地震时值班员迅速发出拦停列车指令](https://so.toutiao.com/search?keyword=地震时值班员迅速发出拦停列车指令)
+1. [小车雪地里玩漂移 原地转了半小时](https://so.toutiao.com/search?keyword=小车雪地里玩漂移+原地转了半小时)
+1. [李大霄赞同股市低迷期多锻炼身体](https://so.toutiao.com/search?keyword=李大霄赞同股市低迷期多锻炼身体)
+1. [救援现场消防员两口吃完一碗牛肉面](https://so.toutiao.com/search?keyword=救援现场消防员两口吃完一碗牛肉面)
+1. [专家：民进党隐藏“潜艇自造”状况](https://so.toutiao.com/search?keyword=专家：民进党隐藏“潜艇自造”状况)
+1. [地震灾区群众拿来馍馍送给消防员](https://so.toutiao.com/search?keyword=地震灾区群众拿来馍馍送给消防员)
+1. [左小青聚餐醉酒后瘫倒](https://so.toutiao.com/search?keyword=左小青聚餐醉酒后瘫倒)
+1. [网友称缴纳中国人寿20年保费未获益](https://so.toutiao.com/search?keyword=网友称缴纳中国人寿20年保费未获益)
+1. [科尔称赞克莱最近的表现](https://so.toutiao.com/search?keyword=科尔称赞克莱最近的表现)
+1. [24小时直击甘肃地震救援](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援)
 1. [积石山6.2级地震救援泪目瞬间](https://so.toutiao.com/search?keyword=积石山6.2级地震救援泪目瞬间)
 1. [人民网：面对游客不满冰城打了个样](https://so.toutiao.com/search?keyword=人民网：面对游客不满冰城打了个样)
-1. [天冷了整点热乎的下酒菜](https://so.toutiao.com/search?keyword=天冷了整点热乎的下酒菜)
-1. [援甘救援队吃兰州拉面老板拒收钱](https://so.toutiao.com/search?keyword=援甘救援队吃兰州拉面老板拒收钱)
-1. [国家气候中心回应暖冬为什么这么冷](https://so.toutiao.com/search?keyword=国家气候中心回应暖冬为什么这么冷)
-1. [马来西亚女歌手被粉丝连捅8刀身亡](https://so.toutiao.com/search?keyword=马来西亚女歌手被粉丝连捅8刀身亡)
 1. [甘肃地震131人遇难 救援基本结束](https://so.toutiao.com/search?keyword=甘肃地震131人遇难+救援基本结束)
-1. [“砂涌现象”与余震没有直接关系](https://so.toutiao.com/search?keyword=“砂涌现象”与余震没有直接关系)
-1. [左小青聚餐醉酒后瘫倒](https://so.toutiao.com/search?keyword=左小青聚餐醉酒后瘫倒)
-1. [专家：甘肃地震伤亡人数出乎意料](https://so.toutiao.com/search?keyword=专家：甘肃地震伤亡人数出乎意料)
-1. [外交部回应中国批准《枪支议定书》](https://so.toutiao.com/search?keyword=外交部回应中国批准《枪支议定书》)
 1. [外卖小哥看到汽车陷雪里热心帮忙](https://so.toutiao.com/search?keyword=外卖小哥看到汽车陷雪里热心帮忙)
-1. [女子8名亲戚在甘肃地震中遇难](https://so.toutiao.com/search?keyword=女子8名亲戚在甘肃地震中遇难)
-1. [李大霄赞同股市低迷期多锻炼身体](https://so.toutiao.com/search?keyword=李大霄赞同股市低迷期多锻炼身体)
 1. [青海海东市红十字会发出倡议献爱心](https://so.toutiao.com/search?keyword=青海海东市红十字会发出倡议献爱心)
-1. [让多人失联的“砂涌”是什么](https://so.toutiao.com/search?keyword=让多人失联的“砂涌”是什么)
 1. [郭正亮：违建争议恐“1尸15命”](https://so.toutiao.com/search?keyword=郭正亮：违建争议恐“1尸15命”)
-1. [专家：股市低迷时投资者多锻炼身体](https://so.toutiao.com/search?keyword=专家：股市低迷时投资者多锻炼身体)
 1. [专家：美在巴以冲突中陷入进退两难](https://so.toutiao.com/search?keyword=专家：美在巴以冲突中陷入进退两难)
-1. [甘肃地震中最帅拉面小伙](https://so.toutiao.com/search?keyword=甘肃地震中最帅拉面小伙)
 1. [汤晓鸥遗体告别仪式举行](https://so.toutiao.com/search?keyword=汤晓鸥遗体告别仪式举行)
-1. [小米辞退三名违规员工 永不录用](https://so.toutiao.com/search?keyword=小米辞退三名违规员工+永不录用)
-1. [搜救犬在孩子面前化身抚慰犬](https://so.toutiao.com/search?keyword=搜救犬在孩子面前化身抚慰犬)
-1. [中百集团员工侵占2亿公款潜逃境外](https://so.toutiao.com/search?keyword=中百集团员工侵占2亿公款潜逃境外)
-1. [俄防长：北约部队直接介入俄乌冲突](https://so.toutiao.com/search?keyword=俄防长：北约部队直接介入俄乌冲突)
 1. [震区灾民痛哭 青海省委书记抱着安慰](https://so.toutiao.com/search?keyword=震区灾民痛哭+青海省委书记抱着安慰)
-1. [鸿蒙入选2023全球十大工程](https://so.toutiao.com/search?keyword=鸿蒙入选2023全球十大工程)
 1. [一公交车撞断路边电线杆 交警回应](https://so.toutiao.com/search?keyword=一公交车撞断路边电线杆+交警回应)
-1. [席琳迪翁病情疑似恶化](https://so.toutiao.com/search?keyword=席琳迪翁病情疑似恶化)
 1. [女生为留学起诉父母分割房产遭拒](https://so.toutiao.com/search?keyword=女生为留学起诉父母分割房产遭拒)
 1. [台媒主持人与蔡正元共同为甘肃祈福](https://so.toutiao.com/search?keyword=台媒主持人与蔡正元共同为甘肃祈福)
-1. [男子20元中4000万连夜驱车领奖](https://so.toutiao.com/search?keyword=男子20元中4000万连夜驱车领奖)
 1. [美发起红海护航行动被指或越护越糟](https://so.toutiao.com/search?keyword=美发起红海护航行动被指或越护越糟)
-1. [江平遗体告别仪式将于12月23日举行](https://so.toutiao.com/search?keyword=江平遗体告别仪式将于12月23日举行)
 1. [特朗普会被“踢出局”吗](https://so.toutiao.com/search?keyword=特朗普会被“踢出局”吗)
 1. [博主炒股亏了被老婆喊话去打工](https://so.toutiao.com/search?keyword=博主炒股亏了被老婆喊话去打工)
-1. [立陶宛总统：中国“记性很好”](https://so.toutiao.com/search?keyword=立陶宛总统：中国“记性很好”)
 1. [油价迎来今年最大跌幅](https://so.toutiao.com/search?keyword=油价迎来今年最大跌幅)
 1. [何猷君第一次牵奚梦瑶手被拒](https://so.toutiao.com/search?keyword=何猷君第一次牵奚梦瑶手被拒)
 1. [如何正确给婴幼儿喂药](https://so.toutiao.com/search?keyword=如何正确给婴幼儿喂药)
@@ -52,17 +78,14 @@
 1. [普京谈俄乌局势：若想谈判那就谈吧](https://so.toutiao.com/search?keyword=普京谈俄乌局势：若想谈判那就谈吧)
 1. [甘肃首个“地震宝宝”救护车内降生](https://so.toutiao.com/search?keyword=甘肃首个“地震宝宝”救护车内降生)
 1. [泰国瑞幸向中国瑞幸索赔100亿泰铢](https://so.toutiao.com/search?keyword=泰国瑞幸向中国瑞幸索赔100亿泰铢)
-1. [男子买新能源车落地一天就故障](https://so.toutiao.com/search?keyword=男子买新能源车落地一天就故障)
 1. [音乐剧《三星堆》北京场演出印象](https://so.toutiao.com/search?keyword=音乐剧《三星堆》北京场演出印象)
 1. [泽连斯基：军方提议再动员50万人](https://so.toutiao.com/search?keyword=泽连斯基：军方提议再动员50万人)
-1. [车主误将车停在冰柱下上演金蝉脱壳](https://so.toutiao.com/search?keyword=车主误将车停在冰柱下上演金蝉脱壳)
 1. [气象部门辟谣广州一路段下雪](https://so.toutiao.com/search?keyword=气象部门辟谣广州一路段下雪)
 1. [专家：广州电动车限行不能一禁了之](https://so.toutiao.com/search?keyword=专家：广州电动车限行不能一禁了之)
 1. [女子在地震中失去至少8位亲人](https://so.toutiao.com/search?keyword=女子在地震中失去至少8位亲人)
 1. [东南亚多国新冠病例激增](https://so.toutiao.com/search?keyword=东南亚多国新冠病例激增)
 1. [世卫将JN.1单独列为需留意的变异株](https://so.toutiao.com/search?keyword=世卫将JN.1单独列为需留意的变异株)
 1. [搜救犬在搜救震区被困人员时受伤](https://so.toutiao.com/search?keyword=搜救犬在搜救震区被困人员时受伤)
-1. [3D全景还原甘肃积石山地震](https://so.toutiao.com/search?keyword=3D全景还原甘肃积石山地震)
 1. [杨元庆当选徽商总会会长](https://so.toutiao.com/search?keyword=杨元庆当选徽商总会会长)
 1. [一文了解新冠病毒JN.1变异株](https://so.toutiao.com/search?keyword=一文了解新冠病毒JN.1变异株)
 1. [中方敦促欧洲议会停止散播涉藏假信息](https://so.toutiao.com/search?keyword=中方敦促欧洲议会停止散播涉藏假信息)
@@ -143,7 +166,6 @@
 1. [以军轰炸加沙城内两栋住宅楼](https://so.toutiao.com/search?keyword=以军轰炸加沙城内两栋住宅楼)
 1. [俄罗斯大选杀出2位黑马](https://so.toutiao.com/search?keyword=俄罗斯大选杀出2位黑马)
 1. [震后第二天 探访青海民和安置点](https://so.toutiao.com/search?keyword=震后第二天+探访青海民和安置点)
-1. [媒体：赖清德难选了](https://so.toutiao.com/search?keyword=媒体：赖清德难选了)
 1. [子弟兵持续奋战在抗震救灾一线](https://so.toutiao.com/search?keyword=子弟兵持续奋战在抗震救灾一线)
 1. [勇士132-126险胜凯尔特人](https://so.toutiao.com/search?keyword=勇士132-126险胜凯尔特人)
 1. [男子地震时抱孩子冲进厕所保护妻子](https://so.toutiao.com/search?keyword=男子地震时抱孩子冲进厕所保护妻子)
